--- a/amazon-clone/src/index.html
+++ b/amazon-clone/src/index.html
@@ -43,12 +43,172 @@
                     <p class="leading-3">Experimente</p>
                     <p class="font-extrabold">Prime</p>
                 </div>
-                <div class="pb-1 border-transparent hover:border-white rounded-sm absolute right-0 top-0 mr-2 mt-2 md:mr-0 md:mt-0 md:relative order-1 md:order-none md:flex">
-                    <i class="fas fa-shopping-carl flex text-2xl md:mr-2"></i>
-                    <span class="bold text"></span>
+                <div class="p-2 border border-transparent hover:border-white rounded-sm absolute right-0 top-0 mr-2 mt-2 md:mr-0 md:t-0 md:relative order-1 md:order-none md:flex">
+                    <i class="fas fa-shopping-cart flex text-2xl md:mr-2"></i>
+                    <span class="bold text-gold-200 text-base absolute top-0 left-0 -mt-1 ml-4 text-center w-6 h-6 bg-darkblue-600 rounded-full">0</span>
+                    <span class="hidden md:flex text-xs font-extrabold">Carrinho</span>
                 </div>
+            </div>
+            <!-- HEADER INTERMEDIÁRIO -->
+            <div class="flex bg-darkblue-600 text-sm px-2 py-1 items-center">
+                <div class="flex items-center border border-transparent hover:border-white rounded-sm px-2 py-2 md:py-0">
+                    <div class="mr-1">
+                        <i class="fas fa-map-marker-alt text-xl"></i>
+                    </div>
+                    <div class="flex md:block leading-tight text-xs">
+                        <p class="mx-1 md:mx-0">Olá</p>
+                        <p class="font-bold">Selecione o endereço</p>
+                    </div>
+                </div>
+                <div class="hidden md:block">
+                    <nav>
+                        <ul class="flex ml-10 text-sm">
+                            <li class="mr-4 border-transparent hover:border-white rounded-sm px-2 py-1">
+                                <a href="#">Mais Vendidos</a>
+                            </li>
+                            <li class="mr-4 border-transparent hover:border-white rounded-sm px-2 py-1">
+                                <a href="#">Livros</a>
+                            </li>
+                            <li class="mr-4 border-transparent hover:border-white rounded-sm px-2 py-1">
+                                <a href="#">Ofertas do Dia</a>
+                            </li>
+                            <li class="mr-4 border-transparent hover:border-white rounded-sm px-2 py-1">
+                                <a href="#">Atendimento ao Cliente</a>
+                            </li>
+                            <li class="mr-4 border-transparent hover:border-white rounded-sm px-2 py-1">
+                                <a href="#">Eletrônicos</a>
+                            </li>
+                            <li class="mr-4 border-transparent hover:border-white rounded-sm px-2 py-1">
+                                <a href="#">Idéias para o Cliente</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <!-- HEADER INFERIOR -->
+            <div class="flex text-black px-4 text-xs border-b border-gray-300 bg-gray-100 pt-1">
+                <a href="#" class="block md:hidden py-2 font-bold">
+                    <i class="fas fa-chevron-left"></i> Todos os Departamentos
+                </a>
+                <ul class="hidden md:flex">
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Livros</a>
+                    </li>
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Pesquisa avançada</a>
+                    </li>
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Mais vendidos</a>
+                    </li>
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Pré-venda e Lançamentos</a>
+                    </li>
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Livros em Oferta</a>
+                    </li>
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Inglês e Outras Línguas</a>
+                    </li>
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Loja Geek</a>
+                    </li>
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Universitários e Acadêmicos</a>
+                    </li>
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Didáticos e Escolares</a>
+                    </li>
+                    <li class="hover:text-orange-650 border-b-2 border-transparent hover:border-orange-650 py-1 px-3">
+                        <a href="#">Loja Infantil</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
+    <main>
+        <div class="grid grid-cols-6">
+            <!-- NAVBAR ESQUERDA -->
+            <div class="col-span-1 hidden md:block pl-2 my-2 border-r border-gray-300 text-xs ">
+                <h3 class="font-bold">Destaque em livros</h3>
+                <ul class="pl-2 mb-2">
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Indicações Amazon</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Inglês e Outras Línguas</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Livros em Oferta</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Mais Vendidos do Mês</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Pré-venda e Lançamentos</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Livros Exclusivos Amazon</a>
+                    </li>
+                </ul>
+                <h3 class="font-bold">Páginas Especiais</h3>
+                <ul class="pl-2 mb-2">
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Livros Clássicos</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Livros Que Viraram Filmes</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Livros Infantis</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Loja Geek</a>
+                    </li>
+                    </ul>
+                    <h3 class="font-bold">Livros Educacionais</h3>
+                    <ul class="pl-2 mb-2">
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Didáticos e Escolares</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Estudo e Ensino de Idiomas</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Examos e Concursos</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Importados para Exames</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Universitários e Acadêmicos</a>
+                    </li>
+                    </ul>
+                    <h3 class="font-bold">Kindle</h3>
+                    <ul class="pl-2 mb-2">
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Acessórios Kindle</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Comprar Kindle</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">eBooks em Inglês</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">eBooks em Oferta</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Kindle Unlimited</a>
+                    </li>
+                    <li class="text-gray-800 hover:text-orange-650">
+                        <a href="#">Todos os eBooks</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-span-5 bg-red-300 h-screen">
+            
+            </div>
+        </div>
+    </main>
 </body>
 </html>
