--- a/dark_mode/src/index.html
+++ b/dark_mode/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
     <div class="dark:bg-green-500 text-black dark:text-white font-bold text-center p-10">
         <p>Dark mode</p>
     </div>
-    <div class="bg-amber-500 dark:bg-amber-900 text-white font-bold text-center p-10">
+    <div class="test">
         <p>Esse é uma cor nova</p>
     </div>
     <div class="bg-rose-500 dark:bg-rose-900 text-white font-bold text-center p-10">
@@ -35,7 +35,9 @@
 
     <div class="m-6">
         <form action="">
-            <input type="text" placeholder="Digite o seu nome" class="rounded" />
+            <div>
+                <input type="date" class="mt-1 block w-full rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0" />
+            </div>
             <input type="email" class="form-input px-4 py-3 rounded-full">
             <input type="checkbox" class="rounded text-pink-500" />
         </form>
